# karaoke-recommender

./: .env.local.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml
docs/: claude_code_instructions.md  database_design_notes.md  karaoke_app_phase1_plan.md  scraper_design_spec.md  supabase_postgres_pitfalls.md
migrations/: 001_initial_schema.sql  002_service_role_grants.sql  003_weighted_unrated_songs.sql  004_spotify_user_connection.sql  005_multi_source_catalog.sql  006_dam_request_no_unique.sql  007_friends_and_rooms.sql  008_fix_room_participants_rls.sql  009_backfill_profiles.sql  010_get_room_state.sql  011_artists_and_genres.sql  (+36 more)
scraper/: .env.example  artist_alias.json  pyproject.toml
scraper/output/: dam_itunes_cache.jsonl  dam_songs.json  dam_vocal_range_cache.jsonl  karaoto_itunes.json  range_results.json  range_results_cache.jsonl  related_artists.json  songs_seed.json  top_artists.json  vocaloid_dam_seed.json
scraper/src/: config.py  extract_vocaloid_dam.py  fetch_blaxeason.py  fetch_certifications.py  fetch_itunes.py  fetch_keytube.py  fetch_spotify.py  fetch_vocal_range.py  fetch_wikipedia_fame.py  main.py  main_dam.py  match_karaoto.py  matcher.py  models.py  note_converter.py  refresh_karaoto_itunes.py  refresh_range_data.py  run_fame_poc.py  scrape_dam.py  scrape_dam_generation.py  scrape_karaoto.py  text_match.py
scraper/tests/: test_fetch_spotify.py  test_main.py  test_matcher.py  test_note_converter.py  test_scrape_dam.py  test_scrape_karaoto.py
scraper/tests/fixtures/: dam_ranking_main.html  karaoto_max_key_34.html
(+134 files in other folders)
