[project]
name = "karaoke-scraper"
version = "0.1.0"
description = "カラオケ推薦アプリ用 楽曲マスタ収集スクリプト"
requires-python = ">=3.9.6,<3.10"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
